--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 
     </header>
 
-    <!-- End Header -->
 
     <!-- Sign In/ Sign Up Modal -->
 
@@ -157,6 +156,13 @@
     <br>
     <br>
 
+    <!-- End Header -->
+
+    <!-- Your Content Here -->
+
+    <br>
+    <br>
+
     <!-- Footer -->
     <footer>
         <div class="footer__widget">
@@ -235,6 +241,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+
+    <!-- End Footer -->
+    
     <script src="/HeaderFooter.js"></script>
 </body>
 
